--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,12 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home">Home</string>
+    <string name="add_a_credit_card_profile">Add a Credit Card Profile</string>
+    <string name="view_credit_card_details">View Credit Card Details</string>
+    <string name="manage_credit_cards">Manage Credit Cards</string>
+    <string name="installment">Installment</string>
+    <string name="add_an_installment">Add an Installment</string>
+    <string name="view_installments">View Installments</string>
+    <string name="manage_installments">Manage Installments</string>
 </resources>
